--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-elements-davis",
     "main": "dist/main.cjs.js",
     "module": "dist/main.es.js",
-    "version": "0.0.3",
+    "version": "0.0.5",
     "private": false,
     "scripts": {
         "dev": "vite",
@@ -22,9 +22,14 @@
     },
     "dependencies": {
         "classnames": "^2.5.1",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "prop-types": "^15.8.1",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
         "react-icons": "^5.3.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/RezaAshrafi77/Davis_componets"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
