--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     },
     "dependencies": {
         "classnames": "^2.5.1",
+        "jalali-moment": "^3.3.11",
         "prop-types": "^15.8.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-icons": "^5.3.0"
+        "react-icons": "^5.3.0",
+        "react-toastify": "^10.0.6"
     },
     "repository": {
         "type": "git",
