--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         "jalali-moment": "^3.3.11",
         "prop-types": "^15.8.1",
         "react": "^18.0.0",
+        "react-date-object": "^2.1.9",
         "react-dom": "^18.0.0",
         "react-icons": "^5.3.0",
+        "react-multi-date-picker": "^4.5.2",
         "react-router-dom": "^7.0.1",
         "react-toastify": "^10.0.6"
     },
