--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react": "^18.0.0",
         "react-date-object": "^2.1.9",
         "react-dom": "^18.0.0",
+        "react-hook-form": "^7.53.2",
         "react-icons": "^5.3.0",
         "react-multi-date-picker": "^4.5.2",
         "react-router-dom": "^7.0.1",
