--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-elements-davis",
     "main": "dist/main.cjs.js",
     "module": "dist/main.es.js",
-    "version": "0.0.12",
+    "version": "0.0.17",
     "private": false,
     "scripts": {
         "dev": "vite",
@@ -30,7 +30,6 @@
         "react-hook-form": "^7.53.2",
         "react-icons": "^5.3.0",
         "react-multi-date-picker": "^4.5.2",
-        "react-router-dom": "^7.0.1",
         "react-toastify": "^10.0.6"
     },
     "repository": {
@@ -50,6 +49,7 @@
         "globals": "^15.9.0",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.15",
-        "vite": "^5.4.1"
+        "vite": "^5.4.1",
+        "vite-plugin-css-injected-by-js": "^3.5.2"
     }
 }
