--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "module": "dist/main.es.js",
     "version": "0.0.44",
     "private": false,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
