--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-elements-davis",
   "main": "dist/main.cjs.js",
   "module": "dist/main.es.js",
-  "version": "0.0.47",
+  "version": "0.0.51",
   "type": "module",
   "private": false,
   "scripts": {
@@ -30,8 +30,7 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
-    "react-multi-date-picker": "^4.5.2",
-    "react-toastify": "^10.0.6"
+    "react-multi-date-picker": "^4.5.2"
   },
   "repository": {
     "type": "git",
