--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-elements-davis",
   "main": "dist/main.cjs.js",
   "module": "dist/main.es.js",
-  "version": "0.1.52",
+  "version": "0.1.54",
   "private": false,
   "type": "module",
   "scripts": {
@@ -18,17 +18,17 @@
     }
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "jalali-moment": "^3.3.11",
+    "classnames": "^2.5.1",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0"
   },
   "dependencies": {
-    "classnames": "^2.5.1",
-    "jalali-moment": "^3.3.11",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-date-object": "^2.1.9",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.53.2",
-    "react-icons": "^5.3.0",
+    "react-dom": "^18.2.0",
     "react-multi-date-picker": "^4.5.2"
   },
   "repository": {
