--- a/package.json
+++ b/package.json
@@ -1,54 +1,61 @@
 {
-  "name": "react-elements-davis",
-  "main": "dist/main.cjs.js",
-  "module": "dist/main.es.js",
-  "version": "0.1.59",
-  "private": false,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "exports": {
-    ".": {
-      "import": "./dist/main.es.js",
-      "require": "./dist/main.cjs.js"
+    "name": "react-elements-davis",
+    "main": "dist/main.cjs.js",
+    "module": "dist/main.es.js",
+    "version": "0.1.63",
+    "style": "dist/style.css",
+    "files": [
+        "dist"
+    ],
+    "private": false,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
+    "exports": {
+        ".": {
+            "import": "./dist/main.es.js",
+            "require": "./dist/main.cjs.js"
+        },
+        "./dist/style.css": {
+            "import": "./dist/style.css",
+            "require": "./dist/style.css"
+        }
+    },
+    "peerDependencies": {
+        "classnames": "^2.5.1",
+        "jalali-moment": "^3.3.11",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.53.0",
+        "react-icons": "^5.3.0"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-date-object": "^2.1.9",
+        "react-dom": "^18.2.0",
+        "react-multi-date-picker": "^4.5.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/RezaAshrafi77/Davis_componets"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.9.0",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.9.0",
+        "eslint-plugin-react": "^7.35.0",
+        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+        "eslint-plugin-react-refresh": "^0.4.9",
+        "globals": "^15.9.0",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17",
+        "vite": "^5.4.1"
     }
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "jalali-moment": "^3.3.11",
-    "classnames": "^2.5.1",
-    "react-hook-form": "^7.53.0",
-    "react-icons": "^5.3.0"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-date-object": "^2.1.9",
-    "react-dom": "^18.2.0",
-    "react-multi-date-picker": "^4.5.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/RezaAshrafi77/Davis_componets"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "vite": "^5.4.1",
-    "vite-plugin-css-injected-by-js": "^3.5.2"
-  }
 }
