--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-elements-davis",
   "main": "dist/main.cjs.js",
   "module": "dist/main.es.js",
-  "version": "0.1.70",
+  "version": "0.1.71",
   "style": "dist/main.css",
   "files": [
     "dist"
@@ -60,6 +60,7 @@
     "postcss-cli": "^11.0.0",
     "postcss-url": "^10.1.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-css-injected-by-js": "^3.5.2"
   }
 }
