--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-elements-davis",
   "main": "dist/main.cjs.js",
   "module": "dist/main.es.js",
-  "version": "0.2.23",
+  "version": "0.2.24",
   "style": "dist/main.css",
   "files": [
     "dist"
@@ -35,9 +35,13 @@
     "react-icons": "^5.3.0"
   },
   "dependencies": {
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "html-to-draftjs": "^1.5.0",
     "react": "^18.2.0",
     "react-date-object": "^2.1.9",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-multi-date-picker": "^4.5.2"
   },
   "repository": {
