--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-elements-davis",
   "main": "dist/main.cjs.js",
   "module": "dist/main.es.js",
-  "version": "0.2.28",
+  "version": "0.2.34",
   "style": "dist/main.css",
   "files": [
     "dist"
@@ -35,6 +35,7 @@
     "react-icons": "^5.3.0"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "html-to-draftjs": "^1.5.0",
