--- a/package.json
+++ b/package.json
@@ -27,19 +27,21 @@
     }
   },
   "peerDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
     "classnames": "^2.5.1",
-    "draft-js": "^0.11.7",
-    "draft-js-export-html": "^1.4.1",
-    "html-to-draftjs": "^1.5.0",
     "jalali-moment": "^3.3.11",
     "react": "^18.2.0",
     "react-date-object": "^2.1.9",
     "react-dom": "^18.2.0",
-    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-multi-date-picker": "^4.5.2"
+  },
+  "optionalDependencies": {
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "html-to-draftjs": "^1.5.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "@tailwindcss/typography": "^0.5.16"
   },
   "repository": {
     "type": "git",
