--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "dist/main.cjs.js",
   "module": "dist/main.es.js",
   "style": "dist/main.css",
-  "version": "0.2.50",
+  "version": "0.2.51",
   "files": [
     "dist"
   ],
@@ -33,13 +33,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "react-multi-date-picker": "^4.5.2"
-  },
-  "optionalDependencies": {
+    "react-multi-date-picker": "^4.5.2",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "html-to-draftjs": "^1.5.0",
-    "react-draft-wysiwyg": "^1.15.0"
+    "react-draft-wysiwyg": "^1.15.0",
+    "@tailwindcss/typography": "^0.5.16"
   },
   "repository": {
     "type": "git",
