--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "main": "dist/main.cjs.js",
     "module": "dist/main.es.js",
     "style": "dist/main.css",
-    "version": "0.2.51",
+    "version": "0.2.53",
     "files": [
         "dist"
     ],
@@ -26,18 +26,18 @@
         }
     },
     "peerDependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-hook-form": "^7.53.0",
         "classnames": "^2.5.1",
-        "jalali-moment": "^3.3.11",
-        "react-date-object": "^2.1.9",
-        "react-icons": "^5.3.0",
-        "react-multi-date-picker": "^4.5.2",
-        "react-draft-wysiwyg": "^1.15.0",
         "draft-js": "^0.11.7",
         "draft-js-export-html": "^1.4.1",
-        "html-to-draftjs": "^1.5.0"
+        "html-to-draftjs": "^1.5.0",
+        "react-draft-wysiwyg": "^1.14.7",
+        "jalali-moment": "^3.3.11",
+        "react": "^18.2.0",
+        "react-date-object": "^2.1.9",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.53.0",
+        "react-icons": "^5.3.0",
+        "react-multi-date-picker": "^4.5.2"
     },
     "optionalDependencies": {
         "@tailwindcss/typography": "^0.5.16"
